# MyuEngine

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  Dependencies.lua  Myu.vcxproj.filters  genProject.bat  genProject.sh  premake5.lua
Editor/: premake5.lua
Editor/src/: EditorApp.cpp
Myu/: premake5.lua
Myu/resources/models/: o5131fbilmlm.mtl
Myu/src/: Myu.hpp  Vendor.hpp
Myu/src/Core/: Application.cpp  Application.hpp  Camera.cpp  Camera.hpp  Core.hpp  Debug.hpp  EntryPoint.cpp  EntryPoint.hpp  GameObject.cpp  GameObject.hpp  KeyboardListener.cpp  KeyboardListener.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  MouseListener.cpp  MouseListener.hpp  Renderer.cpp  Renderer.hpp  Singleton.hpp  Utils.hpp  Window.cpp  Window.hpp
Myu/src/VulkanWrapper/: Utils.cpp  Utils.hpp  Vulkan.cpp  Vulkan.hpp  VulkanContext.cpp  VulkanContext.hpp  VulkanDevice.cpp  VulkanDevice.hpp  VulkanInitializer.cpp  VulkanInitializer.hpp  VulkanModel.cpp  VulkanPipeline.cpp  VulkanPipeline.hpp  VulkanSwapchain.cpp  VulkanSwapchain.hpp  VulkanTexture.cpp  VulkanTexture.hpp
Myu/src/shaders/: combine.frag  compile.bat  compile.sh  effectcompute.comp  gbuf.frag  gbuf.vert  light.frag  light.vert  outline.frag  outline.vert  pointlight.comp  postprocessing.comp  rimlight.comp  shader.frag  shader.vert  specular.vert  specularlight.comp  test.frag  test.vert  wireframe.frag
Myu/src/shaders/새 폴더/: shader.frag  shader.vert
include/GL/: Shader.h  Sprite.h  Texture2D.h  UIElement.h  UIImage.h  UIText.h  VertexArrayObject.h  VertexBufferObject.h
include/MyuEngine/: Background.h  CameraService.h  Character.h  DialogueManager.h  ResourceManager.h  ScriptManager.h  ShaderManager.h  SpriteManager.h  WindowManager.h
resources/scripts/: main.lua
resources/shaders/: sprite-default.frag  sprite-default.vert  sprite.frag  text.frag  ui-image-default.frag  ui-text-default.frag  ui-text-default.vert
resources/workflows/: FaceRedraw.json  HandsRedraw.json  PoseT2i.json  RefRedraw.json  RegRedraw.json  T2i.json
scripts/: server.py
server/: requirements.txt  run.sh  server.py
src/: APIClient.cpp  APIClient.h  Application.cpp  Application.hpp  Camera.cpp  Camera.hpp  CommandBuffers.cpp  CommandBuffers.hpp  FrameBuffer.cpp  FrameBuffer.hpp  GraphicsPipeline.cpp  GraphicsPipeline.hpp  ImageGeneratorWindow.cpp  ImageGeneratorWindow.h  LLMAPIs.hpp  MyuWindow.cpp  MyuWindow.hpp  NovelGeneratorWindow.cpp  NovelGeneratorWindow.h  RenderPass.cpp  RenderPass.hpp  Renderer.cpp  Renderer.hpp  SDAPIs.cpp  SDAPIs.h  SDAPIs.hpp  Utils.cpp  Utils.hpp  Vulkan.cpp  Vulkan.hpp  VulkanCamera.hpp  VulkanCommandBuffers.cpp  VulkanCommandBuffers.hpp  VulkanDebug.cpp  VulkanDebug.hpp  VulkanDevice.cpp  VulkanDevice.hpp  VulkanFrameBuffer.cpp  VulkanFrameBuffer.hpp  VulkanImageView.cpp  (+22 more)
src/Editor/: EditorApp.cpp  EditorApplication.cpp  EditorApplication.hpp
src/GL/: Sprite.cpp  Texture2D.cpp  UIElement.cpp  UIImage.cpp  UIText.cpp  VertexArrayObject.cpp  VertexBufferObject.cpp
src/Myu/: Application.cpp  Application.hpp  Camera.cpp  Myu.hpp  RenderObject.hpp  Utils.hpp  Vulkan.cpp  Vulkan.hpp  VulkanCamera.cpp  VulkanModel.cpp  VulkanModel.hpp  VulkanRenderer.cpp  VulkanSwapchain.hpp
src/Myu/Core/: Application.cpp  Application.hpp  RenderObject.cpp  Utils.cpp
src/Myu/VulkanWrapper/: Vulkan.cpp  VulkanRenderer.cpp  VulkanRenderer.hpp  VulkanSwapchain.cpp
src/MyuEngine/: Background.cpp  CameraService.cpp  Character.cpp  DialogueManager.cpp  ResourceManager.cpp  ScriptManager.cpp  ShaderManager.cpp  SpriteManager.cpp
src/shaders/: compile.sh
